src/test/deca/context/valid/instanceof-null.deca
// Description:
//    Instance of avec un objet d'une classe
//
// Resultats:
//    
//
// Historique:
//    cree le 16/01/2023

class A {

}

{
    A a;
    null instanceof A;
}