src/test/deca/context/invalid/instanceof-expr-not-class.deca
// Description:
//    instanceof avec une variable n'étant pas l'instance d'une classe 
//
// Resultats:
//    Ligne 14: instanceof argument has to be a class (rule 3.40)
//
// Historique:
//    cree le 16/01/2023

class A{}

{
    int a;
    a instanceof A;
}